--- a/_posts/2019-06-13-profiler.md
+++ b/_posts/2019-06-13-profiler.md
@@ -3,7 +3,7 @@ layout:     post
 title:      Lua性能分析工具
 subtitle:   profiler
 date:       2019-6-13
-author:     BY
+author:     myc
 header-img: img/post-bg-ios9-web.jpg
 catalog: true
 tags:
