--- a/_posts/2019-06-17-LuaKit.md
+++ b/_posts/2019-06-17-LuaKit.md
@@ -4,7 +4,7 @@ title:      LuaKit
 subtitle:   lua辅助框架
 date:       2019-6-19
 author:     myc
-header-img: img/lua.jpg
+header-img: img/post-bg-coffee.jpeg
 catalog: true
 tags:
     - Lua
