fix: 更新描述信息
详细信息:

# 提交类型字段
# feat：新功能（feature）
# fix： 修补bug
# docs：文档（documentation）
# refactor：重构（即不是新增功能，也不是修改bug的代码变动）
# test：增加测试

--- a/_posts/2019-06-17-LuaKit.md
+++ b/_posts/2019-06-17-LuaKit.md
@@ -2,7 +2,7 @@
 layout:     post
 title:      LuaKit
 subtitle:   lua辅助框架
-date:       2019-6-19
+date:       2019-6-17
 author:     myc
 header-img: img/post-bg-coffee.jpeg
 catalog: true
@@ -97,7 +97,11 @@ dump(player) --要测试的代码
 
 profiler:stop() --结束分析
 
-profiler:dump_report_to_file( "profiler.txt" ) --输出报告保存到文件
+profiler:dumpReportToFile( "profiler.txt" ) --输出报告保存到文件
 
 
 ```
+输出结果如下:
+<figure>
+<a><img src="{{site.url}}/img/profiler.png"></a>
+</figure>
