--- a/_posts/2019-06-25-协程与xpcall.md
+++ b/_posts/2019-06-25-协程与xpcall.md
@@ -11,7 +11,7 @@ tags:
 
 ---
 
-# xpcall内部调用coroutine.yield(···)
+# 协程与xpcall
 在移植busted测试框架的时候，发现不能在测试用例里面调用协程的yield,核心原因是每个用例是运行在xpcall内，此时调用yield会报错
 
 `attempt to yield across metamethod/C-call boundary`
@@ -19,6 +19,14 @@ tags:
 示例代码
 
 ```lua
+
+	local func = function()
+		print("xpcall xxx");
+	    coroutine.yield()--挂起
+	    print("yield");
+	end
+
+	local funcList = {func,func,func}
 	function run()
 	    local co = coroutine.create(function( ... )
 	        xpcall(function( ... )
@@ -33,4 +41,6 @@ tags:
 	end
 	run()
 ```
-
+## 想要达到目标
+ * 能捕获异常
+ * 能调用协程yield
