--- a/_posts/2019-09-26-ios签名工具.md
+++ b/_posts/2019-09-26-ios签名工具.md
@@ -18,3 +18,82 @@ tags:
 [zsign](https://github.com/zhlynn/zsign)
 
 目前zsign 好用一些
+
+## 测试命令
+
+isign -c isign/tests/credentials/test.cert.pem -k isign/tests/credentials/test.key.pem -p isign/tests/credentials/test.mobileprovision -o resigned.ipa myc.ipa
+
+isign -c isign/tests/credentials/test.cert.pem -k isign/tests/credentials/test.key.pem -p myc.mobileprovision -o resigned.ipa myc.ipa
+
+isign -c certificate.pem -k cert.pem -p myc.mobileprovision -o resigned.ipa myc.ipa
+
+isign -c cert.pem -k myc.key -p myc.mobileprovision -o resigned.ipa myc.ipa
+isign -c cert.pem -k myc.key -p ide.mobileprovision -o ide.ipa demo.ipa
+
+
+isign -c certificate.pem -k cert.pem -p myc.mobileprovision -o resigned2.ipa resign.ipa
+
+setsid node /usr/local/bin/ios-ipa-server -i 47.106.87.33 -p 5454 &
+
+isign -p /home/myc/ios/work/account/seven7Games@126.com/ad.mobileprovision -c /home/myc/ios/work/account/seven7Games@126.com/certificate.pem -k /home/myc/ios/work/account/seven7Games@126.com/key.pem -o /home/myc/ios/ipas/ad.ipa /home/myc/ios/work/account/seven7Games@126.com/myc.ipa
+
+isign -p ide.mobileprovision -o ad_ide.ipa ide.ipa 
+
+openssl x509 -in test.cer -inform DER -out cert.pem -outform PEM
+生成证书
+openssl pkcs12 -export -inkey test.pem -in cert.pem -passout pass:1234 -out dev.p12
+
+生成证书
+openssl pkcs12 -export -inkey sign.key -in sign.pem -passout pass:code_9527 -out ad_hoc.p12
+openssl pkcs12 -in ad_hoc.p12  -out ad_hoc.pem -clcerts -nokeys -passin pass:code_9527
+openssl pkcs12 -in ad_hoc.p12  -out ad_hoc.key -nocerts -nodes -passin pass:code_9527
+
+
+-------------------------------------------------------------------------
+openssl pkcs12 -in dev.p12 -out dev.pem -clcerts -nokeys
+
+openssl pkcs12 -in $p12_path -out $target_cert_path -clcerts -nokeys
+openssl pkcs12 -in $p12_path -out $target_key_path -nocerts -nodes
+
+openssl pkcs12 -in dev.p12  -out dev.pem -clcerts -nokeys -passin pass:code_9527
+openssl pkcs12 -in dev.p12  -out dev.key -nocerts -nodes -passin pass:code_9527
+
+openssl pkcs12 -export -inkey mykey.key -in developer_identity.pem -out iphone_dev.p12 passwpl
+
+
+-------签名 mobileconfig
+openssl smime -sign -in 2.mobileconfig -out signed.mobileconfig -signer sign.pem -inkey sign.key -certfile applecerts.pem -outform der -nodetach
+
+openssl smime -sign -in 1.mobileconfig -out 1.mobileconfig -signer certificate.pem -inkey certificate.key -certfile applecerts.pem -outform der -nodetach
+
+openssl smime -sign -in ./mobileconfig/temp.mobileconfig -out ./templates/1.mobileconfig -signer ./mobileconfig/certificate.pem -inkey ./mobileconfig/certificate.key -certfile ./mobileconfig/applecerts.pem -outform der -nodetach
+
+
+/root/.fastlane/spaceship/seven7Games@126.com
+
+
+isign -c ad_hoc.pem -k ad_hoc.key -p 2_2.0_a86f3349a34291df9a4bf3686d6cc4a5.mobileprovision -o resigned.ipa dn.ipa
+
+('bundle.seal_path', '/tmp/isign-Y_3mPv/Payload/te.app/_CodeSignature/CodeResources', 'bundle.info_path', '/tmp/isign-Y_3mPv/Payload/te.app/Info.plist')
+('seal_path', '/tmp/isign-Y_3mPv/Payload/te.app/_CodeSignature/CodeResources', 'info_path', '/tmp/isign-Y_3mPv/Payload/te.app/Info.plist')
+
+g++ *.cpp common/*.cpp -lcrypto -I/usr/local/openssl-1.1.0h/include -O3 -o zsign
+
+
+ ./isign -c ad_hoc.pem -k ad_hoc.key -p 2_2.0_a86f3349a34291df9a4bf3686d6cc4a5.mobileprovision -o bbb.ipa dn.ipa
+ ./configure prefix=/usr/local/python3 --with-openssl=/usr/local/ssl
+
+  /usr/local/python3/bin/isign -c ad_hoc.pem -k ad_hoc.key -p 2_2.0_a86f3349a34291df9a4bf3686d6cc4a5.mobileprovision -o bbb.ipa dn.ipa
+
+g++ *.cpp common/*.cpp -lcrypto -I/root/openssl/include -L/root/openssl/lib -O3 -o zsign
+
+
+./zsign -c ad_hoc.pem -k ad_hoc.key -m 2_2.0_a86f3349a34291df9a4bf3686d6cc4a5.mobileprovision -o output.ipa -z 9 ide.ipa
+ln -s /root/Py37/bin/python3.7 /usr/bin/python3
+
+./configure --prefix=/usr/local/python3 --with-openssl=$HOME/openssl
+
+
+/usr/local/python3/bin/isign -c ad_hoc.pem -k ad_hoc.key -p 2_2.0_a86f3349a34291df9a4bf3686d6cc4a5.mobileprovision -o db_.ipa yangj.ipa
+
+./zsign -c ad_hoc.pem -k ad_hoc.key -m 2_2.0_a86f3349a34291df9a4bf3686d6cc4a5.mobileprovision -o output.ipa -b 'com.boyaa.myc2' -n 'myc' -z 9  yangj.ipa 
