fix: 更新格式和标签

--- a/_posts/2020-11-06-lua字符串骚操作.md
+++ b/_posts/2020-11-06-lua字符串骚操作.md
@@ -6,7 +6,7 @@ author:     myc
 header-img: img/post-bg-coffee.jpeg
 catalog: true
 tags:
-    - ios
+    - luas
 
 ---
 
@@ -26,7 +26,7 @@ print(type(str3)) --输出 string
 
 但是其实很少有人关注，字符串其实是一个表，可以 `getmetatable` 获取到相应的原表
 
-```
+```lua
 local str = ""
 
 local mt = getmetatable(str);
@@ -156,7 +156,6 @@ local list = path:split("\\") --此时list 等于 {c:,user,tmp,lua}
 for i,v in ipairs(list) do
 	print(i,v)
 end
-
 
 ```
 
