--- a/_posts/2020-11-06-lua字符串骚操作.md
+++ b/_posts/2020-11-06-lua字符串骚操作.md
@@ -157,4 +157,18 @@ for i,v in ipairs(list) do
 	print(i,v)
 end
 
+--以下是测试string自带接口
+
+--字符串全部转为大写字母
+local b = str:upper()
+print(b) -- 输出 STRINGTEST
+
+--找到索引
+local i = str:find("test")
+print(i)-- 输出 7
+
+--在字符串中替换
+local b = str:gsub("test","lua")
+print(b) -- 输出 stringlua
+
 ```
